# pkg-slicer-cli

./: .gitmodules  CMakeLists.txt  InsightToolkit-4.8.2.tar.gz.md5sum  InsightToolkit-5.3.0.tar.gz.md5sum  OrientScalarVolumeCLP.h
scripts/: build_itk.sh  build_using_docker.sh  builddeb.sh  compile.sh  make.sh
scripts/docker_build_environment/: Dockerfile
